--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,7 @@ repositories {
 dependencies {
 	compile group: 'io.reactivex', name: 'rxjava', version: '1.3.8'
 
-	testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
+    testImplementation 'org.mockito:mockito-core:2.22.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
