--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-	compile group: 'io.reactivex', name: 'rxjava', version: '1.3.8'
+    implementation group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.16'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testImplementation 'org.mockito:mockito-core:2.22.0'
