--- a/build.gradle
+++ b/build.gradle
@@ -19,5 +19,5 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.1.0'
     testImplementation 'org.mockito:mockito-core:2.22.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.1.0'
 }
